--- a/config
+++ b/config
@@ -1,2 +1,5 @@
-export SERVER_HOST=
+# The address of the "central" server which will run the competition
+export SERVER_HOST=127.0.0.1
+
+# The numer of games each AI should play against each other AI
 export GAMES_TO_RUN=50
